Fix alignments in mission and footer sections

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,13 +70,14 @@ header {
   position: relative;
   top:69px;
   margin: 0 auto;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
 }
 
 .mission_text {
   position: absolute;
   background: black;
   width: 100%;
-  top: 50%;
+  top: 300px;
 }
 
 /* totm */
@@ -85,7 +86,7 @@ header {
   width: 1000px;
   height: auto;
   position: relative;
-  top:220px;
+  top:140px;
   margin: 0 auto;
 }
 
@@ -133,7 +134,7 @@ height: 300px;
   width: 1200px;
   height: 500px;
   position: relative;
-  top:300px;
+  top:220px;
   margin: 0 auto;
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
   display: flex;
@@ -148,9 +149,9 @@ height: 300px;
 }
 
 .location_location {
-border: 1px solid red;
-justify-content: center;
-align-items: center;
+  border: 1px solid red;
+  justify-content: center;
+  align-items: center;
 }
 
 .locations_flexContainer {
@@ -173,25 +174,46 @@ align-items: center;
   background-color: black;
 }
 
-.tandcs {
-  top: 4000px;
-  z-index: 100;
+footer {
+    top: 220px;
+    position: relative;
+}
+
+footer h2, h5{
+    padding: 20px 20px;
+}
+
+.footer_text {
+  height: 200px;
+}
+
+.footer_container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+
+
+.footer_tandcs {
+  flex-grow: 1;
+
 }
 
 /* break */
 
 /* .locations_container {
-  width: 1200px;
-  height: 700px;
-  position: relative;
-  top:300px;
-  margin: 0 auto;
-  border: 1px solid red;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+width: 1200px;
+height: 700px;
+position: relative;
+top:300px;
+margin: 0 auto;
+border: 1px solid red;
+background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
 }
 
 .locations_text h2 {
-  margin-top: 60px;
+margin-top: 60px;
 }
 
 .locations_flex_container {
@@ -202,20 +224,20 @@ z-index: 100;
 /* break */
 
 /* .locations_flexContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-wrap: wrap;
 }
 
 .locations_text {
-  position: absolute;
-  width: 100%;
-  top: 10%;
+position: absolute;
+width: 100%;
+top: 10%;
 }
 
-  .locations_col {
-    top:300px;
-    z-index: 1;
+.locations_col {
+top:300px;
+z-index: 1;
 
-  }
+}
